--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
   "author": "Lilis",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bluebird": "^3.5.38",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
+    "@types/validator": "^13.7.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.6.0"
   }
 }
