--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "swagger-ui-express": "^4.6.0"
   }
 }
